add Prime Factors project + unitests for it

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -15,5 +15,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Github-demo\Github_demo.csproj" />
+    <ProjectReference Include="..\Prime_Factors\Prime_Factors.csproj" />
   </ItemGroup>
 </Project>
