add class to the Zoo project

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -16,5 +16,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Github-demo\Github_demo.csproj" />
     <ProjectReference Include="..\Prime_Factors\Prime_Factors.csproj" />
+    <ProjectReference Include="..\Lily\Lily.csproj" />
   </ItemGroup>
 </Project>
